# hvm-rollup

./: README.md
offchain-labs/: Cargo.toml
offchain-labs/src/: config.rs  lib.rs  main.rs
offchain-labs/src/bend/: mod.rs
offchain-labs/src/prover/: mod.rs
offchain-labs/src/prover/libs/: zk_snark.rs
offchain-labs/src/sequencer/: mod.rs  transaction.rs
offchain-labs/src/verifier/: mod.rs
offchain-labs/src/verifier/libs/: zk_snark.rs
offchain-labs/src/zk_rollup/: proof.rs  state.rs
offchain-labs/tests/: bend_program_tests.rs  e2e_tests.rs  integration_tests.rs  prover_tests.rs  sequencer_tests.rs  verifier_tests.rs
relayer/: Cargo.toml
relayer/src/: connect.rs  echo.rs  event.rs  lib.rs  main.rs  offchain_lab.rs  relay.rs  req.rs  runtime.rs  util.rs
