[package]
name = "relayer"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
web3 = "0.15.0"
reqwest = "0.11"
bellman = "0.10.0"
log = "0.4"
env_logger = "0.9"

[dependencies.groth16]
version = "0.3.0"