[package]
name = "hvm-relayer"
version = "0.1.0"
edition = "2021"
authors = ["MemechiKekamoto <memechi.kekamoto@pm.me>"]
description = "A offchain relayer for HVM2 infrastructure interacting with a Substrate-based blockchain"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
web3 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
sha3 = "0.10"
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"

[features]
default = []
testnet = []
mainnet = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"