[package]
name = "hvm-relayer"
version = "0.1.0"
edition = "2021"
authors = ["MemechiKekamoto <memechi.kekamoto@pm.me>"]
homepage = "https://github.com/Diehard0413/offchain-relayer"
repository = "https://github.com/Diehard0413/offchain-relayer.git"
description = "A offchain relayer for HVM2 infrastructure interacting with a Substrate-based blockchain"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10"
futures-util = "0.3.26"
hex = "0.4"
log = "0.4"
nostr = { version = "0.19.5", default-features = false }
parking_lot = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
sha3 = "0.10"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
] }
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
] }
url = "2.3.1"
web3 = "0.18"

[dev-dependencies]
criterion = "0.4.0"
flume = "0.10.14"
mockall = "0.11"
tokio-test = "0.4"

[features]
default = []
testnet = []
mainnet = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"